#1 initial testing, got swagger server to start
