# swagger_server/models/__init__.py
@@ -4,5 +4,5 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.index import Index
+from swagger_server.models.index_schema_description import IndexSchemaDescription
 from swagger_server.models.indexes import Indexes
-from swagger_server.models.indexes_indexes import IndexesIndexes
