# swagger_server/models/index_schema_description.py
@@ -9,21 +9,21 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class IndexesIndexes(Model):
+class IndexSchemaDescription(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
     def __init__(self, id: str=None, name: str=None, info: str=None, version: str=None):  # noqa: E501
-        """IndexesIndexes - a model defined in Swagger
+        """IndexSchemaDescription - a model defined in Swagger
 
-        :param id: The id of this IndexesIndexes.  # noqa: E501
+        :param id: The id of this IndexSchemaDescription.  # noqa: E501
         :type id: str
-        :param name: The name of this IndexesIndexes.  # noqa: E501
+        :param name: The name of this IndexSchemaDescription.  # noqa: E501
         :type name: str
-        :param info: The info of this IndexesIndexes.  # noqa: E501
+        :param info: The info of this IndexSchemaDescription.  # noqa: E501
         :type info: str
-        :param version: The version of this IndexesIndexes.  # noqa: E501
+        :param version: The version of this IndexSchemaDescription.  # noqa: E501
         :type version: str
         """
         self.swagger_types = {
@@ -45,34 +45,34 @@ class IndexesIndexes(Model):
         self._version = version
 
     @classmethod
-    def from_dict(cls, dikt) -> 'IndexesIndexes':
+    def from_dict(cls, dikt) -> 'IndexSchemaDescription':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The indexes_indexes of this IndexesIndexes.  # noqa: E501
-        :rtype: IndexesIndexes
+        :return: The index-schema-description of this IndexSchemaDescription.  # noqa: E501
+        :rtype: IndexSchemaDescription
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def id(self) -> str:
-        """Gets the id of this IndexesIndexes.
+        """Gets the id of this IndexSchemaDescription.
 
         Unique identifier for this index type  # noqa: E501
 
-        :return: The id of this IndexesIndexes.
+        :return: The id of this IndexSchemaDescription.
         :rtype: str
         """
         return self._id
 
     @id.setter
     def id(self, id: str):
-        """Sets the id of this IndexesIndexes.
+        """Sets the id of this IndexSchemaDescription.
 
         Unique identifier for this index type  # noqa: E501
 
-        :param id: The id of this IndexesIndexes.
+        :param id: The id of this IndexSchemaDescription.
         :type id: str
         """
 
@@ -80,22 +80,22 @@ class IndexesIndexes(Model):
 
     @property
     def name(self) -> str:
-        """Gets the name of this IndexesIndexes.
+        """Gets the name of this IndexSchemaDescription.
 
         Display name for this index type  # noqa: E501
 
-        :return: The name of this IndexesIndexes.
+        :return: The name of this IndexSchemaDescription.
         :rtype: str
         """
         return self._name
 
     @name.setter
     def name(self, name: str):
-        """Sets the name of this IndexesIndexes.
+        """Sets the name of this IndexSchemaDescription.
 
         Display name for this index type  # noqa: E501
 
-        :param name: The name of this IndexesIndexes.
+        :param name: The name of this IndexSchemaDescription.
         :type name: str
         """
 
@@ -103,22 +103,22 @@ class IndexesIndexes(Model):
 
     @property
     def info(self) -> str:
-        """Gets the info of this IndexesIndexes.
+        """Gets the info of this IndexSchemaDescription.
 
         Documentation about this particular index type  # noqa: E501
 
-        :return: The info of this IndexesIndexes.
+        :return: The info of this IndexSchemaDescription.
         :rtype: str
         """
         return self._info
 
     @info.setter
     def info(self, info: str):
-        """Sets the info of this IndexesIndexes.
+        """Sets the info of this IndexSchemaDescription.
 
         Documentation about this particular index type  # noqa: E501
 
-        :param info: The info of this IndexesIndexes.
+        :param info: The info of this IndexSchemaDescription.
         :type info: str
         """
 
@@ -126,22 +126,22 @@ class IndexesIndexes(Model):
 
     @property
     def version(self) -> str:
-        """Gets the version of this IndexesIndexes.
+        """Gets the version of this IndexSchemaDescription.
 
         Version identifier for this endpoint, preferably in semantic versioning style  # noqa: E501
 
-        :return: The version of this IndexesIndexes.
+        :return: The version of this IndexSchemaDescription.
         :rtype: str
         """
         return self._version
 
     @version.setter
     def version(self, version: str):
-        """Sets the version of this IndexesIndexes.
+        """Sets the version of this IndexSchemaDescription.
 
         Version identifier for this endpoint, preferably in semantic versioning style  # noqa: E501
 
-        :param version: The version of this IndexesIndexes.
+        :param version: The version of this IndexSchemaDescription.
         :type version: str
         """
 
