# swagger_server/swagger/swagger.yaml
@@ -34,7 +34,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/indexes'
-        x-swagger-router-controller: swagger_server.controllers.index_controller
       x-openapi-router-controller: swagger_server.controllers.info_controller
 components:
   schemas:
@@ -63,7 +62,7 @@ components:
           type: array
           description: individually addressable indexes supported by this endpoint
           items:
-            $ref: '#/components/schemas/indexes_indexes'
+            $ref: '#/components/schemas/index-schema-description'
       example:
         indexes:
         - name: name
@@ -79,6 +78,27 @@ components:
         maintainer: maintainer
         info: info
         contact_email: ""
+    index-schema-description:
+      type: object
+      properties:
+        id:
+          type: string
+          description: Unique identifier for this index type
+        name:
+          type: string
+          description: Display name for this index type
+        info:
+          type: string
+          description: Documentation about this particular index type
+        version:
+          type: string
+          description: Version identifier for this endpoint, preferably in semantic
+            versioning style
+      example:
+        name: name
+        id: id
+        version: version
+        info: info
     index:
       type: object
       properties:
@@ -119,27 +139,6 @@ components:
                   search operations, such that Author:XXXX would cause a specific
                   search on the author information in the target index, if not specified
                   it defaults to the attrib_name
-    indexes_indexes:
-      type: object
-      properties:
-        id:
-          type: string
-          description: Unique identifier for this index type
-        name:
-          type: string
-          description: Display name for this index type
-        info:
-          type: string
-          description: Documentation about this particular index type
-        version:
-          type: string
-          description: Version identifier for this endpoint, preferably in semantic
-            versioning style
-      example:
-        name: name
-        id: id
-        version: version
-        info: info
   securitySchemes:
     BearerAuth:
       type: http
